# external

./: .appveyor.yml  .travis.yml  CMakeLists.txt
.github/workflows/: ci.yml
ci/: linux-build.sh  windows-build.ps1  windows-build.sh
cmake/: external.cmake
